cabal-version: 3.0
name: tonyday567
version: 0.0.1
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2020
category: web
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/tonyday567#readme
bug-reports: https://github.com/tonyday567/tonyday567/issues
synopsis: See readme.md
description: See readme.md for description.
build-type: Simple
tested-with: ghc ==9.6.2

source-repository head
  type: git
  location: https://github.com/tonyday567/tonyday567

common ghc-options-exe-stanza
  ghc-options:
    -fforce-recomp
    -funbox-strict-fields
    -rtsopts
    -threaded
    -with-rtsopts=-N

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

common ghc2021-stanza
  default-language: GHC2021

executable tonyday567
  import: ghc-options-exe-stanza
  import: ghc-options-stanza
  import: ghc2021-stanza
  main-is: app.hs
  hs-source-dirs: app
  build-depends:
  build-depends:
    base >=4.7 && <5
